[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
panic = "abort" # 禁用 panic 时栈展开

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# BUG after 0.9.18 @https://github.com/phil-opp/blog_os/issues/403
bootloader = "0.9.18"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-cpu", "Skylake-Client-v3", "-drive", "format=raw,file={}"]